<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java Low SDK Version</string>
    <string name="quantity">quantity</string>
    <string name="_0">0</string>
    <string name="button">Button</string>
    <string name="reset">reset</string>
    <string name="order">Order</string>
    <string name="price">price</string>
    <string name="__0">$0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="template1">Name: %1$s\nQuantity: %2$s\nTotal: $%3$d\nThank you!</string>
    <string name="orderSummary">Order summary</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="cannotOrderZeroNumberOfCoffees">Cannot Order Zero number of coffees</string>
    <string name="addWhippedCream">Add Whipped Cream?</string>
    <string name="addChocolate">Add Chocolate?</string>
    <string name="name_s">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="quan">Quantity:</string>
    <string name="tot">Total: $</string>
    <string name="thank_you">Thank you!</string>
    <string name="orderSum">Order Summary</string>
    <string name="cupLimit100">You cannot have more than 100 cups of coffee</string>
    <string name="cupNumNoNeg">Cannot have negative quantity</string>
</resources>
