<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nayantiwari.justjavalowsdkversion.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/whipped_text_view"
            android:text="@string/toppings"
            style="@style/HeaderTextStyles"/>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:checked="false"
            android:onClick="changeCheckedValue"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:checked="false"
            android:onClick="changeCheckedValue"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView1"
            style="@style/HeaderTextStyles"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@style/addSubButton"
                android:onClick="removeNumberOfCoffees"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="match_parent"
                style="@style/HeaderTextStyles"
                android:layout_marginTop="16dp"
                android:layout_marginRight="0dp"
                android:text="@string/_0"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button1"
                style="@style/addSubButton"
                android:onClick="addNumberOfCoffees"
                android:text="@string/plus" />


        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrders"
            android:text="@string/order"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>